Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <div class="message" id="loveMsg">
     <div class="bigText">I knew you'd say yes! ✨</div>
-    <div class="smallText">Web Developer ❌ W-Rizz Developer 😎</div>
+    <div class="smallText">Rizz Programmer 😎</div>
   </div>
 </div>
 
@@ -179,4 +179,5 @@ yesBtn.addEventListener("click", () => {
 </script>
 
 </body>
+
 </html>
